packages/isar_generator/test/errors/property/enum_float_type.dart
// enums do not support floating point values

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  late MyEnum field;
}

enum MyEnum with IsarEnum<double> {
  optionA;

  @override
  double get value => 5.5;
}
